# wearable_project_django

./: LICENSE  README.md  pyproject.toml  requirements.txt
wearable_project/: manage.py
wearable_project/model/: model_run.py
wearable_project/model/configs/datasets/: 5757project.py
wearable_project/model/configs/models/: resnet50.py
wearable_project/model/configs/resnet/: 5757project.py
wearable_project/model/configs/schedules/: imagenet_bs256.py
wearable_project/static/js/: app.js  websocket_client.js
wearable_project/templates/: index.html  model_stats.html  surgical_workflow_visualization.html  video.html
wearable_project/videostream/: consumers.py  model_interface.py  urls.py  views.py
wearable_project/wearable_project/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
